--- a/index.html
+++ b/index.html
@@ -12,8 +12,17 @@
     <div id="box1">
         <h1>The Atomic Lounge</h1>
         </div>
-    <div id="box2">  
-        </div>
-    
+        <div class="container">
+            <img src="Charles1.jpg" alt="Post Office" class="image">
+            <div class="overlay">
+              <div class="text">Book Reviews</div>
+            </div>
+          </div>
+          <div class="container1">
+            <img src="Journal1.jpg" alt="Journal" class="image1">
+            <div class="overlay1">
+                <div class="text1">Journal</div>
+            </div>
+          </div>
 </body>
 </html>
