--- a/index.html
+++ b/index.html
@@ -23,14 +23,20 @@
                 </div>
             <div class="column">
             <div class="container1">
-              <img src="Journal1.jpg" alt="Journal" class="'image1">
+              <img src="Journal1.jpg" alt="Journal" class="image1">
               <div class="overlay1">
                 <div class="text1">Blog</div>
                  </div>
                   </div>
                     </div>
             <div class="column">
-              <div class="container2"></div>        
-                      </div>
+              <div class="container2">
+                <img src="Film.jpg" alt="Film" class="image2">
+                  <div class="overlay2">
+                    <div class="text2">Movie Reviews</div>
+                      </div>        
+                        </div>
+                          </div>
+                            </div>
 </body>
 </html>
